fixed alignment and displayTag display issues.

--- a/gemma-web/src/main/webapp/styles/antisense/layout.css
+++ b/gemma-web/src/main/webapp/styles/antisense/layout.css
@@ -182,6 +182,15 @@
 	-moz-border-radius: 0px 0px 0px 0px;
 }
 
+table.list {
+	border-width: 1px 2px 1px 2px;
+	border-spacing: 4px;
+	border-style: outset outset outset outset;
+	border-color: gray gray gray gray;
+	border-collapse: separate;
+	background-color: white;
+}
+
 /* reduced font size elements */
 .small {
 	font-size: smaller;	
