--- a/gemma-web/src/main/webapp/styles/displaytag.css
+++ b/gemma-web/src/main/webapp/styles/displaytag.css
@@ -46,7 +46,7 @@ span.pagelinks {
     display: block;
     font-size: .95em;
     margin-bottom: 5px;
-    margin-top: -18px;
+    margin-top: 5px;
     padding: 2px 0px 2px 0px;
     text-align: right;
     width: 80%;
